# graph-tot-dspy

./: .gitignore  CLAUDE.md  LICENSE  NEXT_STEPS.md  README.md  REVIEW.md  main.py  optimize.py  pyproject.toml
.github/issues/: 01-trace-level-vs-thought-level-branching.md  02-evaluation-fidelity-score-semantics-and-selection-truncation.md  03-remove-unnecessary-synthesis-step-and-fix-double-scoring.md  04-fix-branch-matching-by-answer-text-collision.md  05-add-dspy-compilation-and-optimization.md  06-adopt-dspy-idioms-signatures-types-assertions.md  07-parallel-branch-generation.md  create-issues.sh
.github/workflows/: ci.yml
github_issues/: 001-accumulate-all-branches-across-rounds.md  002-selection-vote-token-safe-candidate-payloads.md  003-faiss-cache-key-must-include-graph-identity.md  004-harden-library-api-typing-and-version-contract.md  005-structured-tool-errors-for-library-consumers.md
scripts/: create_github_issues_from_drafts.py  create_github_issues_from_drafts.sh
src/graph_tot/: __init__.py  data_loader.py  dspy_modules.py  evaluate.py  graph_env.py  optimize.py
stubs/faiss/: __init__.pyi
tests/: conftest.py  test_api_contract.py  test_async_branches.py  test_beam_search.py  test_branch.py  test_data_loader.py  test_evaluate.py  test_evaluator.py  test_faiss_cache.py  test_graph_env_tools.py  test_graph_interface.py  test_parallel_branches.py  test_rate_limit.py  test_trajectory.py
