[project]
name = "graph-tot-dspy"
version = "0.1.0"
description = "Graph Tree-of-Thought with Agent-based retrieval in DSPy (GRBench Healthcare)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.1.3",
    "anthropic>=0.40.0",
    "litellm>=1.50.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "networkx>=3.3",
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.0",
    "rouge-score>=0.1.2",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
]

[project.scripts]
graph-tot = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_tot"]
# py.typed (PEP 561) is automatically included by hatchling via packages above.
# Keep sdist aligned with wheel so source installs include package modules.

[tool.hatch.build.targets.sdist]
include = ["src/graph_tot"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--tb=short"]
