[project]
name = "graph-tot-dspy"
version = "0.1.0"
description = "Graph Tree-of-Thought with Agent-based retrieval in DSPy (GRBench Healthcare)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.1.3",
    "litellm>=1.81.14",
    "sentence-transformers>=5.2.3",
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.2",
    "datasets>=4.5.0",
    "rouge-score>=0.1.2",
    "rich>=14.3.3",
    "python-dotenv>=1.2.1",
    "click>=8.3.1",
]

[project.scripts]
graph-tot = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_tot"]
# py.typed (PEP 561) is automatically included by hatchling via packages above.
# Keep sdist aligned with wheel so source installs include package modules.

[tool.hatch.build.targets.sdist]
include = ["src/graph_tot"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ipython>=9.10.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--tb=short"]

[tool.ty.environment]
extra-paths = ["stubs"]
